Fixed scrollbar for chat log

--- a/frontend/src/pages/ChatPage/ChatPage.css
+++ b/frontend/src/pages/ChatPage/ChatPage.css
@@ -12,7 +12,9 @@
   background-color: var(--white-light);
   display: flex;
   flex-direction: column;
-  padding: 16px;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  padding-top: 16px;
   box-shadow: var(--mui-shadow-1);
   border-right: 2px solid var(--white-dark);
   box-sizing: border-box;
@@ -36,10 +38,23 @@
 .chat-logs {
   flex: 1;
   margin-top: 16px;
+  margin-right: 2px;
   overflow-y: auto;
-  margin-bottom: 16px;
   display: flex;
   flex-direction: column;
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #f2f0ef;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #949392;
+    border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #66615e;
+  }
 }
 
 .chat-item {
@@ -48,6 +63,7 @@
   cursor: pointer;
   position: relative;
   margin-bottom: 8px;
+  margin-right: 4px;
   border: 2px solid var(--white-black);
 }
 
@@ -95,6 +111,7 @@
   box-sizing: border-box;
   width: 100%;
   padding: 8px;
+  padding-right: 16px;
   background-color: var(--white-light);
   border-top: 2px solid var(--white-black);
   position: sticky;
